maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:4: error: ')' expected but integer literal found.
  for (i <- to 5){
               ^ShortestPathMaze:12: error: illegal start of simple expression
}
^